gccida/g2/cached_make_edge
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cached_make_edge/src/cfg.c:771:12: error: expected expression
*( _OWORD *)&result->insns = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cached_make_edge/src/cfg.c:771:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->insns = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cached_make_edge/src/cfg.c:772:12: error: expected expression
*( _OWORD *)&result->pred_next = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cached_make_edge/src/cfg.c:772:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->pred_next = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cached_make_edge/src/cfg.c:773:12: error: expected expression
*( _OWORD *)&result->src = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cached_make_edge/src/cfg.c:773:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->src = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cached_make_edge/src/cfg.c:774:12: error: expected expression
*( _OWORD *)&result->flags = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cached_make_edge/src/cfg.c:774:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->flags = 0LL; 
   ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cached_make_edge/src/obj/cfg.o] Error 1
